--- a/product_detail.html
+++ b/product_detail.html
@@ -28,6 +28,135 @@
                 </ul>
             </div>
         </div>
+        <div class="product__detail__product">
+            <div class="product__detail__product__left">
+                <div class="product__detail__product__left-item">
+                    <img src="./assets/frontend/image/product_detail/product_1.png" alt="" class="product__detail__product__left-img active">
+                    <img src="./assets/frontend/image/product_detail/product_2.png" alt="" class="product__detail__product__left-img">
+                    <img src="./assets/frontend/image/product_detail/product_3.png" alt="" class="product__detail__product__left-img">
+                    <img src="./assets/frontend/image/product_detail/product_4.png" alt="" class="product__detail__product__left-img">
+                </div>
+                <div class="product__detail__product__left__r-item">
+                    <div class="product__detail__product__left__r-item-list">
+                        <div class="product__detail__product__left__r-item-img active">
+                            <img src="./assets/frontend/image/product_detail/product_1.png" alt="">
+                        </div>
+                        <div class="product__detail__product__left__r-item-img">
+                            <img src="./assets/frontend/image/product_detail/product_2.png" alt="">
+                        </div>
+                        <div class="product__detail__product__left__r-item-img">
+                            <img src="./assets/frontend/image/product_detail/product_3.png" alt="">
+                        </div>
+                        <div class="product__detail__product__left__r-item-img">
+                            <img src="./assets/frontend/image/product_detail/product_4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="product__detail__product__left__r-item-button">
+                        <div class="product__detail__product__left__r-btn product__detail__product__left__r-btn-previous">
+                            <i class="product__detail__product__left__r-btn-icon fas fa-chevron-left"></i>
+                        </div>
+                        <div class="product__detail__product__left__r-btn product__detail__product__left__r-btn-next">
+                            <i class="product__detail__product__left__r-btn-icon fas fa-chevron-right"></i>
+                        </div>
+                    </div>
+                    <div class="product__detail__product__left__r-item-zoom">
+                        <i class="product__detail__item-zoom-icon fas fa-search-plus"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="product__detail__product__right">
+                <div class="product__detail__product__right__price">
+                    <span class="product__detail__product__right__price-text">
+                        $20.99
+                    </span>
+                    <div class="product__detail__product__right-item-button">
+                        <div class="product__detail__product__right-btn">
+                            <i class="product__detail__product__right-btn-icon fas fa-chevron-left"></i>
+                        </div>
+                        <div class="product__detail__product__right-btn">
+                            <i class="product__detail__product__right-btn-icon fas fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="product__detail__product__right__label-wrap">
+                    <div class="product__detail__product__right__label">
+                        <i class="product__detail__product__right__label-icon far fa-check-circle"></i>
+                        <span class="product__detail__product__right__label-text">in stock</span>
+                    </div>
+                    <div class="rate__product__stars-list product__detail__product__right-start">
+                        <i class="rate__product__stars-icon far fa-star"></i>
+                        <i class="rate__product__stars-icon far fa-star"></i>
+                        <i class="rate__product__stars-icon far fa-star"></i>
+                        <i class="rate__product__stars-icon far fa-star"></i>
+                        <i class="rate__product__stars-icon far fa-star"></i>
+                        <div class="rate__product__sub-stars-list">
+                            <i class="rate__product__sub-stars-icon active fas fa-star"></i>
+                            <i class="rate__product__sub-stars-icon active fas fa-star"></i>
+                            <i class="rate__product__sub-stars-icon active fas fa-star"></i>
+                            <i class="rate__product__sub-stars-icon active fas fa-star"></i>
+                            <i class="rate__product__sub-stars-icon fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="product__detail__product__right__review">
+                        <span class="product__detail__product__right__review-count">7</span>
+                        Review
+                    </div>
+                </div>
+                <div class="product__detail__product__right__sku">
+                    <span class="product__detail__product__right__sku-text">Sku:</span>
+                    <span class="product__detail__product__right__sku-code">01gon34</span>
+                </div>
+                <p class="product__detail__product__right__description">
+                    Lorem ipsum dolor sit amet, feugiat delicata liberavisse id cum,
+                    Lorem ipsum dolor sit amet, feugiat delicata liberavisse id cum 
+                    Lorem ipsum dolor sit amet, feugiat delicata liberavisse id cum
+                    Lorem ipsum dolor sit amet, feugiat delicata liberavisse id cum
+                </p>
+                <div class="product__detail__product__right__color">
+                    <span class="product__detail__product__right__color-text">Chosse Color:</span>
+                    <div class="product__detail__product__right__color-list">
+                        <div class="product__detail__product__right__color-item green"></div>
+                        <div class="product__detail__product__right__color-item blue"></div>
+                        <div class="product__detail__product__right__color-item red"></div>
+                        <div class="product__detail__product__right__color-item yellow"></div>
+                    </div>
+                </div>
+                <div class="product__detail__product__right__size">
+                    <span class="product__detail__product__right__size-text">Chosse size:</span>
+                    <select class="product__detail__product__right__size-choose" id="size">
+                        <option value="" class="product__detail__product__right__size-option">Medium</option>
+                        <option value="38" class="product__detail__product__right__size-option">38</option>
+                        <option value="39" class="product__detail__product__right__size-option">39</option>
+                        <option value="40" class="product__detail__product__right__size-option">40</option>
+                        <option value="41" class="product__detail__product__right__size-option">41</option>
+                        <option value="42" class="product__detail__product__right__size-option">42</option>
+                    </select>
+                </div>
+                <div class="product__detail__product__right__cart-wrap">
+                    <div class="product__detail__product__right__quantity">
+                        <input class="product__detail__product__right__quantity-input" type="text" value="1"/>
+                        <div class="product__detail__product__right__quantity__button">
+                            <p class="btn-count product__detail__product__right__quantity__button-plus">+</p>
+                            <p class="btn-count product__detail__product__right__quantity__button-subtraction">-</p>
+                        </div>
+                    </div>
+                    <div class="product__detail__product__right__cart">
+                        <i class="fas fa-shopping-cart"></i>
+                        add to cart
+                    </div>
+                    <div class="product__detail__product__right__heart">
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <div class="product__detail__product__right__reweet">
+                        <i class="fas fa-retweet"></i>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
+    <footer style="margin-bottom: 400px;"></footer>
+    <script src="./assets/frontend/js/app.js"></script>
 </body>
 </html>
